--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Bluebeard (Legendary character) -- Juvenile fiction'
 - !lcsh 'Fairy tales'
 - !lcc 'PZ'
+- GITenberg
 title: "A New History of Blue Beard\r\nFor the Amusement of Little Lack Beard, and\
   \ His Pretty Sisters"
 url: http://www.gutenberg.org/ebooks/43050
